--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,6 +9,7 @@ backend:
     deleteMedia: '[skip ci] Delete “{{path}}”'
 media_folder: static/images
 public_folder: /images
+publish_mode: editorial_workflow
 
 collections:
   - name: "pages"
