--- a/package.json
+++ b/package.json
@@ -13,7 +13,32 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@babel/core": "7.4.3",
+    "@svgr/webpack": "4.1.0",
+    "@typescript-eslint/eslint-plugin": "1.6.0",
+    "@typescript-eslint/parser": "1.6.0",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "8.0.5",
+    "babel-plugin-named-asset-import": "^0.3.5",
+    "babel-preset-react-app": "^9.1.0",
+    "bootstrap": "^4.4.1",
     "bulma": "^0.9.0",
+    "camelcase": "^5.2.0",
+    "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "css-loader": "2.1.1",
+    "dotenv": "6.2.0",
+    "dotenv-expand": "4.2.0",
+    "eslint": "^5.16.0",
+    "eslint-config-react-app": "^4.0.1",
+    "eslint-loader": "2.1.2",
+    "eslint-plugin-flowtype": "2.50.1",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "file-loader": "3.0.1",
+    "fs-extra": "7.0.1",
     "gatsby": "^2.24.80",
     "gatsby-image": "^2.3.5",
     "gatsby-plugin-netlify": "^2.2.4",
@@ -28,18 +53,67 @@
     "gatsby-source-filesystem": "^2.2.5",
     "gatsby-transformer-remark": "^2.7.5",
     "gatsby-transformer-sharp": "^2.4.7",
+    "google-map-react": "^1.1.5",
+    "html-webpack-plugin": "4.0.0-beta.5",
+    "identity-obj-proxy": "3.0.0",
+    "is-wsl": "^1.1.0",
+    "jest": "24.7.1",
+    "jest-environment-jsdom-fourteen": "0.1.0",
+    "jest-resolve": "24.7.1",
+    "jest-watch-typeahead": "0.3.0",
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.4",
+    "mini-css-extract-plugin": "0.5.0",
     "netlify-cms-app": "^2.9.6",
     "netlify-cms-media-library-cloudinary": "^1.3.2",
     "netlify-cms-media-library-uploadcare": "^0.5.2",
     "netlify-identity-widget": "^1.9.1",
     "node-sass": "^4.14.0",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
+    "pnp-webpack-plugin": "1.2.1",
+    "postcss-flexbugs-fixes": "4.1.0",
+    "postcss-loader": "3.0.0",
+    "postcss-normalize": "7.0.1",
+    "postcss-preset-env": "6.6.0",
+    "postcss-safe-parser": "4.0.1",
     "prop-types": "^15.6.0",
     "react": "^16.8.4",
+    "react-accessible-accordion": "^3.0.1",
+    "react-animate-on-scroll": "^2.1.5",
+    "react-app-polyfill": "^1.0.5",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-countup": "^4.3.2",
+    "react-dev-utils": "^9.1.0",
     "react-dom": "^16.8.4",
     "react-helmet": "^6.0.0",
-    "uuid": "^7.0.0"
+    "react-icons": "^3.8.0",
+    "react-image-lightbox": "^5.1.1",
+    "react-modal-video": "^1.2.3",
+    "react-parallax": "^3.0.3",
+    "react-particles-js": "^2.7.0",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^5.1.2",
+    "react-scroll-up": "^1.3.3",
+    "react-scrollspy": "^3.4.2",
+    "react-slick": "^0.24.0",
+    "react-tabs": "^3.1.0",
+    "react-text-loop": "^2.3.0",
+    "react-tilt": "^0.1.4",
+    "react-video-tag": "0.0.10",
+    "react-visibility-sensor": "^5.1.1",
+    "resolve": "1.10.0",
+    "sass-loader": "^7.3.1",
+    "semver": "6.0.0",
+    "slick-carousel": "^1.8.1",
+    "style-loader": "0.23.1",
+    "terser-webpack-plugin": "1.2.3",
+    "ts-pnp": "1.1.2",
+    "url-loader": "1.1.2",
+    "uuid": "^7.0.0",
+    "webpack": "4.29.6",
+    "webpack-dev-server": "3.2.1",
+    "webpack-manifest-plugin": "2.0.4",
+    "workbox-webpack-plugin": "4.2.0"
   },
   "devDependencies": {
     "prettier": "2.1.2"
