--- a/package.json
+++ b/package.json
@@ -39,20 +39,20 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
-    "gatsby": "^2.24.80",
+    "gatsby": "^2.24.91",
     "gatsby-image": "^2.3.5",
-    "gatsby-plugin-netlify": "^2.2.4",
-    "gatsby-plugin-netlify-cms": "^4.2.5",
+    "gatsby-plugin-netlify": "^2.3.25",
+    "gatsby-plugin-netlify-cms": "^4.3.17",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.2.5",
-    "gatsby-plugin-sass": "^2.2.4",
+    "gatsby-plugin-sass": "^2.3.22",
     "gatsby-plugin-sharp": "^2.5.7",
     "gatsby-remark-copy-linked-files": "^2.2.4",
-    "gatsby-remark-images": "^3.2.6",
+    "gatsby-remark-images": "^3.3.40",
     "gatsby-remark-relative-images": "^0.3.0",
-    "gatsby-source-filesystem": "^2.2.5",
-    "gatsby-transformer-remark": "^2.7.5",
-    "gatsby-transformer-sharp": "^2.4.7",
+    "gatsby-source-filesystem": "^2.3.37",
+    "gatsby-transformer-remark": "^2.8.47",
+    "gatsby-transformer-sharp": "^2.5.20",
     "google-map-react": "^1.1.5",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
@@ -64,7 +64,7 @@
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.4",
     "mini-css-extract-plugin": "0.5.0",
-    "netlify-cms-app": "^2.9.6",
+    "netlify-cms-app": "^2.13.1",
     "netlify-cms-media-library-cloudinary": "^1.3.2",
     "netlify-cms-media-library-uploadcare": "^0.5.2",
     "netlify-identity-widget": "^1.9.1",
@@ -77,14 +77,14 @@
     "postcss-preset-env": "6.6.0",
     "postcss-safe-parser": "4.0.1",
     "prop-types": "^15.6.0",
-    "react": "^16.8.4",
+    "react": "^17.0.1",
     "react-accessible-accordion": "^3.0.1",
     "react-animate-on-scroll": "^2.1.5",
     "react-app-polyfill": "^1.0.5",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-countup": "^4.3.2",
     "react-dev-utils": "^9.1.0",
-    "react-dom": "^16.8.4",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.0.0",
     "react-icons": "^3.8.0",
     "react-image-lightbox": "^5.1.1",
@@ -111,7 +111,7 @@
     "url-loader": "1.1.2",
     "uuid": "^7.0.0",
     "webpack": "4.29.6",
-    "webpack-dev-server": "3.2.1",
+    "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "4.2.0"
   },
