--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "gatsby-transformer-remark": "^2.8.47",
     "gatsby-transformer-sharp": "^2.5.20",
     "google-map-react": "^1.1.5",
-    "html-webpack-plugin": "4.0.0-beta.5",
+    "html-webpack-plugin": "^4.5.0",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
     "jest": "24.7.1",
@@ -69,7 +69,7 @@
     "netlify-cms-media-library-uploadcare": "^0.5.2",
     "netlify-identity-widget": "^1.9.1",
     "node-sass": "^4.14.0",
-    "optimize-css-assets-webpack-plugin": "5.0.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
@@ -110,9 +110,9 @@
     "ts-pnp": "1.1.2",
     "url-loader": "1.1.2",
     "uuid": "^7.0.0",
-    "webpack": "4.29.6",
+    "webpack": "^5.3.2",
     "webpack-dev-server": "^3.11.0",
-    "webpack-manifest-plugin": "2.0.4",
+    "webpack-manifest-plugin": "^2.2.0",
     "workbox-webpack-plugin": "4.2.0"
   },
   "devDependencies": {
