--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "eslint-plugin-react": "7.12.4",
     "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "3.0.1",
-    "fs-extra": "7.0.1",
+    "fs-extra": "^9.0.1",
     "gatsby": "^2.24.91",
     "gatsby-image": "^2.3.5",
     "gatsby-plugin-netlify": "^2.3.25",
@@ -106,7 +106,7 @@
     "semver": "6.0.0",
     "slick-carousel": "^1.8.1",
     "style-loader": "0.23.1",
-    "terser-webpack-plugin": "1.2.3",
+    "terser-webpack-plugin": "^5.0.3",
     "ts-pnp": "1.1.2",
     "url-loader": "1.1.2",
     "uuid": "^7.0.0",
