--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "public"
-  command = "npm run build"
+  command = "npm run start"
   functions = "lambda"
 [build.environment]
   NODE_VERSION = "12"
